# flask_websocket

./: Dockerfile  Makefile  compose.yaml  main.py  netifaces-0.10.6-cp311-cp311-macosx_13_0_arm64.whl  pyproject.toml  requirements.txt
.aws/: audio-streamer-deploy.json
.github/workflows/: aws.yml
app/: __init__.py  main.py
copilot/: .workspace
copilot/audio-streamer/: manifest.yml
copilot/pipelines/audio-streamer/: buildspec.yml  manifest.yml
copilot/streamer/: manifest.yml
