[tool.poetry]
name = "flask-websocket"
version = "0.1.0"
description = ""
authors = ["Vladimir Markov <mvaldemyar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
socketio = "^0.2.1"
gunicorn = "^21.2.0"
flask-socketio = "^5.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
